--- a/eam/common/generator/src/main/resources/templates/ApiController.java.vm
+++ b/eam/common/generator/src/main/resources/templates/ApiController.java.vm
@@ -145,11 +145,13 @@ public class #(simpleName) extends SuperController {
 		Result<#(poSimpleName)> result=new Result<>();
 		#(poSimpleName) #(poVarName)=#(serviceVarName).getById(#(controllerMethodParameterPassIn4GetById));
 		#for(f : fields)
-		#if(f.isSelectField)
+		#if(f.typeName.equals("select_box"))
 		#if(f.selectField.enumTypeName!=null)
 		#else
+		#if(f.selectField.fillByConstName!=null)
 		// 关联出 #(f.labelInList) 数据
 		#(serviceVarName).join(#(poVarName),#(poMetaClassName).#(f.selectField.fillByConstName));
+		#end
 		#end
 		#end
 		#end
@@ -217,11 +219,13 @@ public class #(simpleName) extends SuperController {
 		Result<PagedList<#(poSimpleName)>> result=new Result<>();
 		PagedList<#(poSimpleName)> list=#(serviceVarName).queryPagedList(sample,sample.getPageSize(),sample.getPageIndex());
 		#for(f : fields)
-		#if(f.isSelectField)
+		#if(f.typeName.equals("select_box"))
 		#if(f.selectField.enumTypeName!=null)
 		#else
+		#if(f.selectField.fillByConstName!=null)
 		// 关联出 #(f.labelInList) 数据
 		#(serviceVarName).join(list,#(poMetaClassName).#(f.selectField.fillByConstName));
+		#end
 		#end
 		#end
 		#end
