--- a/eam/common/generator/src/main/resources/templates/ServiceImplment.java.vm
+++ b/eam/common/generator/src/main/resources/templates/ServiceImplment.java.vm
@@ -158,4 +158,15 @@ public class #(simpleName) extends SuperService<#(poSimpleName)> implements #(in
 		return super.buildExcelStructure(isForExport);
 	}
 
+	#if(relationMasterIdField!=null)
+	/**
+     * 保存关系
+     * @param #(relationMasterVar) #(relationMasterVarDoc)
+     * @param #(relationSlaveVar) #(relationSlaveVarDoc)
+     */
+	public void saveRelation(#(relationMasterVarType) #(relationMasterVar),List<#(relationSlaveVarType)> #(relationSlaveVar)) {
+		super.saveRelation(#(relationMasterIdField),#(relationMasterVar), #(relationSlaveIdField),#(relationSlaveVar),#(isRelationClearWhenEmpty));
+	}
+	#end
+
 }
