--- a/eam/common/generator/src/main/resources/templates/form.js.vm
+++ b/eam/common/generator/src/main/resources/templates/form.js.vm
@@ -10,7 +10,7 @@ function FormPage() {
       */
 	this.init=function(layui) { 	
      	admin = layui.admin,settings = layui.settings,form = layui.form,upload = layui.upload,foxup=layui.foxnicUpload;
-		table = layui.table,layer = layui.layer,util = layui.util,fox = layui.foxnic,xmSelect = layui.xmSelect;
+		laydate = layui.laydate,table = layui.table,layer = layui.layer,util = layui.util,fox = layui.foxnic,xmSelect = layui.xmSelect;
 		
 		//渲染表单组件
 		renderFormFields();
@@ -26,25 +26,42 @@ function FormPage() {
 		adjustPopup();
 		#end
 	}
-	
+
+	/**
+	 * 自动调节窗口高度
+	 * */
+	var adjustPopupTask=-1;
 	function adjustPopup() {
-		setTimeout(function () {
+		clearTimeout(adjustPopupTask);
+		var scroll=$(".form-container").attr("scroll");
+		if(scroll=='yes') return;
+		adjustPopupTask=setTimeout(function () {
 			var body=$("body");
 			var bodyHeight=body.height();
-			var area=admin.changePopupArea(null,bodyHeight);
+			var footerHeight=$(".model-form-footer").height();
+			var area=admin.changePopupArea(null,bodyHeight+footerHeight);
 			admin.putTempData('#(formAreaKey)', area);
 			window.adjustPopup=adjustPopup;
-		},50);
+			if(area.tooHeigh) {
+				var windowHeight=area.iframeHeight;
+				var finalHeight=windowHeight-footerHeight-16;
+				//console.log("windowHeight="+windowHeight+',bodyHeight='+bodyHeight+",footerHeight="+footerHeight+",finalHeight="+finalHeight);
+				$(".form-container").css("display","");
+				$(".form-container").css("overflow-y","scroll");
+				$(".form-container").css("height",finalHeight+"px");
+				$(".form-container").attr("scroll","yes");
+			}
+		},250);
 	}
 	
 	/**
       * 渲染表单组件
       */
 	function renderFormFields() {
-		form.render();
+		fox.renderFormInputs(form);
 	   
 	    #for(f : fields)
-	    #if(f.isUploadField)
+	    #if(f.typeName.equals("upload"))
 	    //渲染图片字段
 		foxup.render({
 			el:"#(f.varName)",
@@ -81,7 +98,7 @@ function FormPage() {
 				adjustPopup();
 			}
 	    });
-		#else if(f.isSelectField)
+		#else if(f.typeName.equals("select_box"))
 		//渲染 #(f.varName) 下拉字段
 		fox.renderSelectBox({
 			el: "#(f.varName)",
@@ -108,7 +125,7 @@ function FormPage() {
 			#end
 			#if(f.selectField.queryApi!=null)
 			#if(f.selectField.filter)
-			searchField: "#(f.selectField.textField))", //请自行调整用于搜索的字段名称
+			searchField: "#(f.selectField.textField)", //请自行调整用于搜索的字段名称
 			extraParam: {}, //额外的查询参数，Object 或是 返回 Object 的函数
 			#end
 			transform: function(data) {
@@ -134,6 +151,11 @@ function FormPage() {
 			}
 			#end
 		});
+		#else if(f.typeName.equals("date_input"))
+		laydate.render({
+			elem: '##(f.varName)',
+			trigger:"click"
+		});
 	    #end
 	    #end
 	}
@@ -155,25 +177,42 @@ function FormPage() {
 			form.val('data-form', formData);
 
 	     	#for(f : fields)
-		    #if(f.isUploadField)
-			//设置  #(f.labelInForm)  显示附件
+		    #if(f.typeName.equals("upload"))
+			//设置 #(f.labelInForm) 显示附件
 		    if($("##(f.varName)").val()) {
 				foxup.fill("#(f.varName)",$("##(f.varName)").val());
+		    } else {
+				adjustPopup();
+			}
+		    #end
+		    #end
+
+
+			#for(f : fields)
+		    #if(f.typeName.equals("check_box"))
+			//设置 #(f.labelInForm) 显示复选框勾选
+		    if(formData["#(f.varName)"]) {
+				fox.setCheckedValue("#(f.varName)",formData["#(f.varName)"]);
 		    }
 		    #end
 		    #end
 
+
 			#for(f : fields)
-			#if(f.isSelectField)
-			//设置 #(f.labelInForm) 下拉框选中值
-			var #(f.varName)Select=xmSelect.get("##(f.varName)",true);
-			var #(f.varName)Opionts=[];
-			if (formData.#(f.selectField.fillBy))	{
-				#(f.varName)Opionts=#(f.varName)Select.options.transform([formData.#(f.selectField.fillBy)]);
-			}
-			#(f.varName)Select.setValue(#(f.varName)Opionts);
+			#if(f.typeName.equals("select_box"))
+			//设置  #(f.labelInForm) 设置下拉框勾选
+			#if(f.selectField.queryApi!=null && f.selectField.fillBy!=null)
+			fox.setSelectValue4QueryApi("##(f.varName)",formData.#(f.selectField.fillBy));
+			#elseif(f.selectField.dictCode!=null)
+			fox.setSelectValue4Dict("##(f.varName)",formData.#(f.varName),SELECT_#(f.varName.toUpperCase())_DATA);
+			#elseif(f.selectField.enumTypeName!=null)
+			fox.setSelectValue4Enum("##(f.varName)",formData.#(f.varName),SELECT_#(f.varName.toUpperCase())_DATA);
 			#end
 			#end
+			#end
+
+
+
 
 	     	fm.attr('method', 'POST');
 	     	renderFormFields();
@@ -197,10 +236,11 @@ function FormPage() {
     
 	    form.on('submit(submit-button)', function (data) {
 	    	//debugger;
-	    	
+			data.field = form.val("data-form");
+
 
 	    	#for(f : fields)
-		    #if(f.isLogicField)
+		    #if(f.typeName.equals("logic_switch"))
 			//处理 #(f.labelInForm) 默认值
 		    if(!data.field.#(f.varName)) data.field.#(f.varName)=0;
 		    #end
@@ -208,7 +248,16 @@ function FormPage() {
 
 
 			#for(f : fields)
-			#if(f.isSelectField)
+			#if(f.typeName.equals("check_box"))
+			//处理 #(f.labelInForm) 默认值
+			data.field["#(f.varName)"]=fox.getCheckedValue("#(f.varName)");
+			#end
+			#end
+
+
+
+			#for(f : fields)
+			#if(f.typeName.equals("select_box"))
 			//获取 #(f.labelInForm) 下拉框的值
 			data.field["#(f.varName)"]=xmSelect.get("##(f.varName)",true).getValue("value");
 			#if(!f.selectField.muliti)
@@ -218,6 +267,9 @@ function FormPage() {
 			#end
 			#end
 			#end
+
+			//校验表单
+			if(!fox.formVerify("data-form",data,VALIDATE_CONFIG)) return;
 
 	    	var api=moduleURL+"/"+(data.field.#(idPropertyName)?"update":"insert");
 	        var task=setTimeout(function(){layer.load(2);},1000);
@@ -248,6 +300,6 @@ layui.config({
 }).extend({
 	xmSelect: 'xm-select/xm-select',
 	foxnicUpload: 'upload/foxnic-upload'
-}).use(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','xmSelect','foxnicUpload'],function() {
+}).use(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','xmSelect','foxnicUpload','laydate'],function() {
 	(new FormPage()).init(layui);
 });
